--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -1,16 +1,23 @@
 nav{
     background-color: rgb(30, 110, 230);
     display: flex;
-    width:100%;
+    width:auto;
     height:60px;
     margin:0;
     position: relative;
-    top:0;
-    left:0;
+    flex-wrap: wrap;
 }
 
 img{
     margin-left:250px;
+    height: 50px;
+    margin-top:7px ;
+}
+.cimg{
+    height:30px;
+    margin-top: 5px;
+    margin-left:20px;
+    padding: 0%;
 }
 
 .search{
@@ -20,10 +27,56 @@ img{
 }
 
 .login-button{
-    width:90px;
+    width:120px;
     margin-top:10px;
     margin-left:150px;
     height:40px;
     font-size: medium;
     color:rgb(30, 110, 230);
+}
+
+.bt{
+    background-color: rgb(30, 110, 230);
+    color:white;
+    width:90px;
+    margin-top:10px;
+    margin-left:20px;
+    margin-right: 5px;
+    height:40px;
+    font-size: 20px;
+    border:none;
+}
+.b{
+    display:none;
+}
+
+.cart{
+    background-color: rgb(30, 110, 230);
+    color:white;
+    width:90px;
+    margin-top:10px;
+    height:40px;
+    font-size: 20px;
+    border:none;
+}
+
+.items{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin:auto;
+    height:auto;
+    padding: 10px;;
+    border: 1px solid black;
+}
+
+.bd{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    width:auto;
+    margin:auto;
+    height:auto;
+    padding:45px;
+    align-self: center;
 }
