--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -12,6 +12,9 @@ nav{
     flex-wrap: wrap;
     justify-content: space-around;
     padding:10px;
+    top:0;
+    position: sticky;
+    z-index: 1000;
 }
 
 .nav-container-1{
